Added th 4.2 proof

--- a/report/references.bib
+++ b/report/references.bib
@@ -101,3 +101,13 @@ year = {2013}
    author={Lample, Guillaume and Ballesteros, Miguel and Subramanian, Sandeep and Kawakami, Kazuya and Dyer, Chris},
    year={2016}
 }
+@incollection{NIPS2008_3400,
+title = {Fast Rates for Regularized Objectives},
+author = {Sridharan, Karthik and Shai Shalev-shwartz and Nathan Srebro},
+booktitle = {Advances in Neural Information Processing Systems 21},
+editor = {D. Koller and D. Schuurmans and Y. Bengio and L. Bottou},
+pages = {1545--1552},
+year = {2009},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/3400-fast-rates-for-regularized-objectives.pdf}
+}
